--- a/index.htm
+++ b/index.htm
@@ -1,109 +1,8 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="shortcut icon" href="http://se.360.cn/favicon.ico" mce_href="http://se.360.cn/favicon.ico" type="image/x-icon">
-<title>糟糕，谷歌搜索无法访问...</title>
-<style type="text/css">
-html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, p, blockquote, pre, form, input, textarea, fieldset, table, th, td{margin:0;padding:0;}
-body, button, input, select, textarea{font: 12px/1.5 Tahoma, Helvetica, Arial, 'Microsoft YaHei', sans-serif;}
-body{color:#000;}
-ul, ol{list-style:none;}
-img{border:none;vertical-align:top;}
-
-.doc{width:560px;margin:-130px 0 0 -280px; position: absolute; top:50%; left: 50%}
-.doc .logo{position: absolute; top:10px;right:0;width: 228px; height: 207px; background: url(http://p7.qhimg.com/d/inn/0355a527/jump6gg.png) 0 -125px;}
-.doc h1{font-size: 26px; font-weight: normal;}
-.doc h2{font-size:14px;opacity: .5; font-weight: normal; margin: 18px 0 8px 0}
-.doc h2 strong{color:#f00;}
-.doc li{height:37px;line-height:37px;margin-bottom:11px;}
-.doc li em{font-style: normal; opacity: .5; font-size: 14px; display: inline-block; width: 60px;}
-.doc li a{width:130px;height:37px;background:url(http://p7.qhimg.com/d/inn/0355a527/jump6gg.png) no-repeat;display:inline-block;vertical-align:middle;}
-.doc li a.search_360{background-position:0 0;}
-.doc li a.search_360:hover{background-position:-150px 0;}
-.doc li a.baidu{background-position:0 -43px;}
-.doc li a.baidu:hover{background-position:-150px -43px;}
-.doc li a.bing{background-position:0 -86px;}
-.doc li a.bing:hover{background-position:-150px -86px;}
-
-
-.doc p{border-top:1px dotted #ddd;padding:10px 0 0;}
-.doc p input{vertical-align:middle;}
-a, input {outline:0;}
-</style>
+<h1>Please waiting to my website...</h1>
+<meta http-equiv="refresh" content="0.1 url=https://xn--ubt767m.cc/me/002">
 </head>
 <body>
-<script src="http://hao.360.cn/css/monitorscript.js?v=110720.js"></script>
-<script>
-moniter.getTrack();
-</script>
-<script>
-    var mid;var sid;function GetSID(){if(sid){return sid};sid=external.GetSID&&external.GetSID(window);return sid};function GetMID(){if(mid){return mid};mid=GetSID()&&external.GetMID(sid);return mid||''};function sendGif(filename,data,callback){var params="";for(var k in data){params+=k+"="+data[k]+"&"};var IMG=new Image();IMG.onload=function(){callback&&callback();IMG.onload=null};IMG.onerror=function(){callback&&callback();IMG.onerror=null};IMG.src="https://dd.browser.360.cn/static/a/"+filename+"?"+params+"mid="+GetMID()+"&"+Date.now()+Math.random().toString().replace("0.","").substr(0,10)};
-  </script>
-<script>
-var htmlspecialchars = function (string){
-    var data = [];
-    for(var i = 0 ;i <string.length;i++) {
-          data.push( "&#"+string.charCodeAt(i)+";");
-    }
-    return data.join("");
-}
-
-var getParameter = (function(){
-        //the bt manipulation for special parameter string
-      var searchStr = document.location.search.substr(1).split("?").join("&"),
-      searchArr = searchStr.split("&"),
-      paramObjs = {};
-        for(var i=0,max=searchArr.length;i<max;i++)
-        {
-          paramArr = searchArr[i].split("=");
-            if(paramArr[0]&& paramArr[1])
-            {
-              paramObjs[paramArr[0]]=paramArr[1];
-            }
-        }
-    return function(name)
-    {
-      return (paramObjs[name])?paramObjs[name]:"";
-    };
-   })(),
-  skip2search = false,
-  encoding = getParameter("ie").toLowerCase()||"utf-8",
-  q=htmlspecialchars(getParameter("q")),
-  skip2Url = {"zonghesousuo":"https://www.so.com/s?q="+q+"&src=guge_err&ie="+encoding,"baidu":"http://www.baidu.com/s?tn=57095150_9_oem_dg&wd="+q+"&ie="+encoding,"bing":"http://www.bing.com/search/search?q="+q+"&ie="+encoding},
-  setSearchSkip = function(engine){
-    if (engine === 'baidu') {
-        // 增加打点
-        sendGif('1340.4070.gif')
-    }
-  };
-  if (!q) {
-    skip2Url.baidu = "http://www.baidu.com/s?tn=57095150_9_oem_dg&ie="+encoding
-  }
-  document.write('<div class="doc"><h1>糟糕!谷歌搜索无法访问…</h1><h2>请您稍后再试，或选择切换到其他搜索引擎：</h2><ul><li><em>切换到：</em><a href="'+skip2Url["zonghesousuo"]+'" title="360搜索" onclick="setSearchSkip(\'zonghesousuo\');" hidefocus="true" class="search_360"></a></li><li><em></em><a href="'+skip2Url["baidu"]+'" title="百度" onclick="setSearchSkip(\'baidu\');" hidefocus="true" class="baidu"></a></li><li><em></em><a href="'+skip2Url["bing"]+'" title="必应" onclick="setSearchSkip(\'bing\');" hidefocus="true" class="bing"></a></li></ul><div class="logo"></div></div>');
-
-</script>
-<script>
-
-var _iwt_UA="UA-360-000001";
-(function (D) {
-    var s=D.createElement("script"),h=D.getElementsByTagName("head")[0];s.src=" http://h.qhimg.com/js/iwt.js";s.type="text/javascript";s.charset="utf-8";h.appendChild(s);
-})(document);
-
-</script>
-<!-- Begin comScore Tag -->
-<script>
-
-  var _comscore = _comscore || [];
-  _comscore.push({ c1: "2", c2: "7129932" });
-  (function() {
-    var s = document.createElement("script"), el = document.getElementsByTagName("script")[0]; s.async = true;
-    s.src = (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js";
-    el.parentNode.insertBefore(s, el);
-  })();
-
-</script>
-<noscript><img src="http://b.scorecardresearch.com/p?c1=2&c2=7129932&cv=2.0&cj=1" /></noscript>
-<!-- End comScore Tag -->
 </body>
 </html>
