--- a/404.html
+++ b/404.html
@@ -1,1 +1,8 @@
-1
+<html>
+<head>
+<h1>Please waiting to my website...</h1>
+<meta http-equiv="refresh" content="0 url=https://xn--ubt767m.cc/me/002">
+</head>
+<body>
+</body>
+</html>
