--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <h1>Please waiting to my website...</h1>
-<meta http-equiv="refresh" content="0 url=https://xn--ubt767m.cc/me/002">
+<meta http-equiv="refresh" content="0 url=https://xn--ubt767m.cc/me/002.html">
 </head>
 <body>
 </body>
